updates display in index.handlebars to show who posted

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -9,6 +9,7 @@
   {{#each trip}}
   	<li>
   	<p><span class="label">ID:</span> {{this.id}}</p>
+      <p><span class="label">Posted By:</span> {{this.dest_name}}</p>
       <p><span class="label">Destination:</span> {{this.dest_continent}}</p>
       <p><span class="label">Description:</span> {{this.dest_summary}}</p>
       <p><span class="label">Rating:</span> {{this.dest_rating}}</p>
