--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,9 +10,9 @@
 <ul>
   {{#each trip}}
   	<li>
-  	<p><span class="label">ID:</span> {{this.id}}</p>
-      <p><span class="label">Posted By:</span> {{this.dest_name}}</p>
-      <p><span class="label">Destination:</span> {{this.dest_continent}}</p>
+  	{{!-- <p><span class="label">ID:</span> {{this.id}}</p> --}}
+      <h3><span class="label">Destination:</span> {{this.dest_continent}}</span></h3>
+      <p>{{this.dest_name}} <span class="label">Wrote:</span></p>
       <p><span class="label">Description:</span> {{this.dest_summary}}</p>
       <p><span class="label">Rating:</span> {{this.dest_rating}}</p>
   	</li>
