--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,9 @@
   <p>Explore the world</p>
 </div>
 
-<a href="/{{this.id}}">-a button for something-</a>
+<button class= "addTrip" type="click">Add a Trip</button>
+
+<button href="/{{this.id}}">Sort Trips by Rating</button>
 
 <!-- Pass in data from tripper_db -->
 <ul>
