Makes buttons clickable and routing works correctly.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,9 +4,9 @@
   <p>Explore the world</p>
 </div>
 
-<button class= "addTrip" type="click">Add a Trip</button>
+<a href="/addTrip" class= "addTrip" type="click"><button>Add a Trip</button></a>
 
-<button href="/{{this.id}}">Sort Trips by Rating</button>
+<a href="/{{this.id}}"><button>Sort Trips by Rating</button></a>
 
 <!-- Pass in data from tripper_db -->
 <ul>
