--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,13 +1,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-		<link rel="stylesheet" href="/css/styles.css" type="t" />
+		<link rel="stylesheet" href="/assets/css/styles.css" type="t" />
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<title>Tripper</title>
 	</head>
 	<body>
 		{{{ body }}}
 	</body>
-	<script src="assets/js/index.js" type=""></script>
+	<script src="/assets/js/index.js" type=""></script>
 </html>
 
