--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,13 +12,17 @@
 <ul>
   {{#each trip}}
   	<li>
-  	{{!-- <p><span class="label">ID:</span> {{this.id}}</p> --}}
-      <h3><span class="label">Destination:</span> {{this.dest_name}}</span></h3>
+      <h3><span class="label">Destination:</span><span id='destination'>{{this.dest_name}}</span></h3>
       <p>{{this.posted_by}} <span class="label">Wrote:</span></p>
       <p><span class="label">Description:</span> {{this.dest_summary}}</p>
       <p><span class="label">Rating:</span> {{this.dest_rating}}</p>
   	</li>
+
+      <div id="image">
+
+      </div>
+    
+
   {{/each}}
 </ul>
-
 
