--- a/views/addTrip.handlebars
+++ b/views/addTrip.handlebars
@@ -5,7 +5,7 @@
   <form class="create-trip">
 
     <div class="form-group">
-      <label for="new-trip">Your :</label>
+      <label for="new-trip">Your Name:</label>
       <textarea id="auth" name="trip" rows="8" cols="40"></textarea>
     </div>
     <div class="form-group">
@@ -21,7 +21,7 @@
       <textarea id="rating" name="trip" rows="8" cols="40"></textarea>
     </div>
 
-    <button type="submit">Add Your Trip </button>
+    <button id="submit" type="submit">Add Your Trip </button>
   </form>
 
 </div>
