--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,9 +18,9 @@
       <p><span class="label">Rating:</span> {{this.rating}}</p>
   	</li>
 
-      <div id="image">
+      <img id="image" src="">
 
-      </div>
+      </img>
     
 
   {{/each}}
