adds delete button

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,7 +17,7 @@
       <p><span class="label">Description:</span> {{this.summary}}</p>
       <p><span class="label">Rating:</span> {{this.rating}}</p>
   	</li>
-
+      <button class="delete" data-id="{{this.author}}">Delete: {{this.name}}</button>
       <div id="image">
 
       </div>
