--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -9,380 +9,125 @@
 }
 
 body, html{
-    min-height: 100%
+    min-height: 100%;
 }
 
 body {
-    background-image: url(../Images/Tripper-Logo1.jpg);
+    background-image: url(../images/TripperBG.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
 
-header{
-    font-size: 45px;
-    align-items: center;
+h1 {
+    display:block;
+    font-size: 100px;
+    font-family:cursive;
+    font-weight:600;
+    transform: scale(1.4);
+    margin-left: 45%;
+    margin-bottom: 5%;
+    margin-top: 5%;
+    color: #07707c;
 }
-
-/*.addTrip {
-
-}
-
 
 ul {
     list-style: none;
 }
 
-/* navigation-bar styling*
-
-.navigation-bar {
-    position: fixed;
-    width: 100%;
-    z-index: 999;
-    padding: 15px 0;
-    background: ;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    font-weight: 600;
-}
-
-.navigation-bar .nav-container{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.nav-container{
-    display: flex;
-    max-width: 90%;
-    margin: 0 auto;
-    align-items: center;
-    justify-content: space-between;
-}
-
-/*.navigation-bar .logo{
-    color:;
-    font-size: 35px;
-    font-weight: 700;
-}*
-
-.navigation-bar .menu li{
-    list-style: none;
-    display: inline-block;
-}
-
 li {
-    margin-left: 25px;
-}
-
-/*.navigation-bar .menu li a{
-    color: white;
-    font-size: 18px;
-    font-weight: 500;
-    transition: color 0.3s ease;
-}*?
-
-/*Hover fuction for the navigation-bar*
-.navigation-bar .menu li a:hover{
-    color:;
-}
-
-.logo:hover{
-    color:;
-}
-
-
-/* Styling of the "Home" Section and addition of the BackGround image *
-.home {
-    display: flex;
-    background: url() no-repeat right ;
-    background-size: 45%;
-    background-blend-mode: darken;
-    background-color:;
-    height: 100vh;
-    color:;
-    min-height: 500px;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
-.home .nav-container{
-    margin: auto 0 auto 40px;
-    max-width: 45%;
-}
-
-.home .home-content .text-1{
-    font-size: 20px;
-}
-
-.home .home-content .text-2{
-    font-size: 55px;
-    font-weight: 650;
-    margin-left: -3px;
-}
-
-.home .home-content .text-3{
-    font-size: 40px;
-    margin: 5px 0;
-}
-
-.home .home-content .text-3 span{
-    color:;
-    font-weight: 500;
-}
-
-.home .home-content a{
-    display: inline-block;
-    background:;
-    color:;
-    font-size: 25px;
-    padding: 12px 36px;
-    margin-top: 20px;
-    border-radius: 6px;
-    border:;
-    transition: all 0.3s ease;
-}
-
-section{
-    padding: 100px 0;
-    background-color: ;
-}
-.Trip_Info {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-.rip_Info .title{
-    position: relative;
-    text-align: center;
-    font-size: 40px;
-    font-weight: 600;
-    margin-bottom: 60px;
-    margin-left: 35%;
-    margin-top: 25px;
-    padding-bottom: 20px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-
-.Trip_Info .title::before{
-    content: "";
-    position: absolute;
-    bottom: 0px;
-    left: 50%;
-    width: 180px;
-    height: 5px;
-    background: ;
-    transform: translatex(-50%);
-}
-    
-    @media (min-width: 800px) {
-        .services {
-            display: flex;
-            max-width: 900px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        
-        .service + .service {
-            margin-left: 2em;
-        }
-    }
-    
-    .service {
-        max-width: 500px;
-        margin:0 auto;
-    }
-    
-    @media (min-width: 800px) {
-        .service {
-            display: flex;
-            max-width: 1000px;
-            margin: 0 auto;
-        }
-    
-        .service + .service {
-            margin-left: 1em;
-        }
-    }
-    
-    h3 {
-        text-align: center;
-        width: 55px;
-        margin-left: 225px;
-        margin-bottom: 25px;
-    }
-
-/* Members Trips area styling*
-.Memebers_Trips {
-    max-width: 960px;
-    margin: 0 auto;
-    padding: 6% 2%;
-}
-
-.Trips_grid {
-    margin: 20px 0 0 0;
-    padding: 0;
     list-style: none;
-    display: block;
-    text-align: center;
-    width: 100%;
 }
 
-.Trips_grid:after {
-    clear: both;
+p1 {
+    font-size:45px;
+    font-weight: 600;
+    color:#090a0a;
+    display:flex;
+    margin-left:38%;
+    margin-right:22%;
 }
 
-.Trips_grid:after, .Trips_box1 .Trips_box:before {
-    content: "";
-    display: table;
-}
-
-.Trips_grid li {
-    width:320px;
-    height: 320px;
-    display: inline-block;
-    margin: 30px;
-}
-
-.Trips_box1 {
-    width: 105%;
-    height: 100%;
-    padding: 0%;
-    margin-right: 35%;
-    position: top;
-    cursor: pointer;
-    border-radius: 10px;
-    -webkit-transition: 0.3s ease-in-out;
-    -webkit-transform: 0.3s ease-in-out;
-    -moz-transition: 0.3s ease-in-out;
-    -moz-transform: 0.3s ease-in-out;
-    transition: 0.3s ease-in-out;
-    transform: 0.3s ease-in-out;
-}
-    
-.Trip_box {
-    width: 85%;
-    height: 90%;
-    position: relative;
-    cursor: pointer;
-    border-radius: 10px;
-    -webkit-transition: 0.3s ease-in-out;
-    -webkit-transform: 0.3s ease-in-out;
-    -moz-transition: 0.3s ease-in-out;
-    -moz-transform: 0.3s ease-in-out;
-    transition: 0.3s ease-in-out;
-    transform: 0.3s ease-in-out;
-}
-
-.Trips_box1:hover {
-    transform: scale(1.05);
-}
-
-.Trips_box:hover {
-    transform: scale(1.05);
-}
-
-.Member_Trip1 {
-    background: linear-gradient(rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.10)),
-    url()
-}
-
-.Member_Trip2 {
-    background: linear-gradient(rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.10)),
-    url()
-}
-
-.Member_Trip3 {
-    background: linear-gradient(rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.10)),
-    url()
-}
-
-
-/* responsive media query start *
-@media (max-width: 1300px){
-    .section_title_section_title_projects{
-        margin-left: 25%;
-    }
-}
-
-@media (max-width: 1300px){
-    .home .nav-container{
-        margin-left: 0px;
-    }
-}
-
-@media (max-width: 1104px){
-    .About_Me .About_Me-content .left img {
-        height: 350px;
-        width: 350px;
-    }
-}
-
-/*Footer content styling*
-.footer {
-    background-color:;
-    padding: 10px;
-}
-
-.footer .columns {
-    max-width: 1400px;
-    width: 100%;
-    display: grid;
-    overflow: hidden;
-    margin: 0 auto 25px;
-    margin-top: 15px;
-}
-
-.contact_us {
-    font-size: 25px;
+p {
     font-weight: 500;
-    color: ;
-    clear: right;
-    margin-left: -15%;
-    margin-top: 25px;
 }
 
-.Tripper_Crew_info {
+a{
+    display:flex;
+    align-items: center;
+    justify-content:center;
+    margin-right: 30%;
+    margin-left: 4%;
+}
+
+/*Add trip/Delete trip Button styling*/
+a button{
+    background-color: #6992b4;
+    font-size: 20px;
+    color: aliceblue;
+    border-radius: 5px;
+    margin-left: 50%;
+    margin-right: 10%;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    cursor: pointer;
+    -webkit-transition: 0.3s ease-in-out;
+    -webkit-transform: 0.3s ease-in-out;
+    -moz-transition: 0.3s ease-in-out;
+    -moz-transform: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+    transform: 0.3s ease-in-out;
+}
+
+a button:hover {
+    transform: scale(1.25);
+}
+
+/*Delete Button Styling*/
+button {
+    background-color: rgb(211, 162, 162);
+    margin-top: 7px;
+    margin-left: 0px;
+    -webkit-transition: 0.3s ease-in-out;
+    -webkit-transform: 0.3s ease-in-out;
+    -moz-transition: 0.3s ease-in-out;
+    -moz-transform: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+    transform: 0.3s ease-in-out;
+}
+
+button:hover {
+    transform: scale(1.07);
+}
+
+/*Travels Section Card Styling*/
+section{
+    position: relative;
+    height: 300px;
+    z-index: 2;
+    margin: 31px 31px 31px 31px;
+    padding: 5px 5px;
+    border: 15px;
+    background: rgba(245, 245, 245, 0.671);
+    border-radius: 12px;
+    transform: translateY(31px);
+}
+
+/* Footer Styling*/
+footer {
+    color: white;
+}
+
+footer ul li {
     display: flex;
-    max-width: 100%;
-    margin-top:-55px;
-    margin-left: 15%;
-    justify-content: space-between;
+    margin-top: 15px;
+    margin-left: 25%;
+    padding: 5px;
 }
 
-.email a{
-    font-size: 25px;
-    color: ;
-    transition: color 0.3s ease;
-}
 
-.Git1 a{
-    font-size: 25px;
-    font-weight: 600;
-    color: ;
-    transition: color 0.3s ease;
-}
-
-.Git2 a{
-    font-size: 25px;
-    font-weight: 600;
-    color: ;
-    transition: color 0.3s ease;
-}
-
-.Ph1 {
-    font-size: 25px;
-    color: ;
-}
-
-.info li a:hover {
-    color: ;
-}
-
-@media (max-width: 1150px){
-    .ID .info {
-        display: grid;
-        margin-top: 5%;
-        height: 395px;
-        width: 395px;
-        justify-content: space-between;
-
+/* responsive media query start */
+@media (max-width: 1500px){
+    body {
+        margin-left: 0;
     }
 }
