--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -185,8 +185,16 @@ footer ul li {
 
 
 /* responsive media query start */
-@media (max-width: 1500px){
+@media all and (min-width: 500px){
     body {
-        margin-left: 0;
+        max-width: 50%;
+        margin-right: 40%;
+    }
+}
+
+@media (max-width: 500px){
+    textarea {
+        max-width: 240px;
+        max-height: 40px;   
     }
 }
