--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -183,18 +183,16 @@ footer ul li {
     padding: 5px;
 }
 
-
 /* responsive media query start */
-@media all and (min-width: 500px){
-    body {
-        max-width: 50%;
+@media all and (max-width: 300px){
+    html body .create-trip {
         margin-right: 40%;
     }
 }
 
-@media (max-width: 500px){
-    textarea {
-        max-width: 240px;
-        max-height: 40px;   
+@media all and (min-width: 600px){
+   .create-trip {
+        margin-left: 20%;
+        margin-right: 20%
     }
 }
