Makes minor styling changes to home page and add trip page.

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -19,27 +19,43 @@ body {
 }
 
 h1 {
+    text-align: center;
     display:block;
     font-size: 100px;
     font-family:cursive;
     font-weight:600;
     transform: scale(1.4);
-    margin-left: 45%;
     margin-bottom: 5%;
     margin-top: 5%;
     color: #07707c;
 }
 
 h2 {
+    text-align: center;
     display:block;
     font-size: 50px;
     font-family:cursive;
     font-weight:600;
     transform: scale(1.4);
-    margin-left: 45%;
     margin-bottom: 5%;
     margin-top: 5%;
     color: #0a0c0c;
+}
+
+#nav-btns {
+    width: 25%;
+    justify-self: center;
+    margin-left: 38%;
+    display: block;
+    justify-content: center;
+}
+
+#addTrip {
+    margin-left: 50px;
+}
+
+#sortRating {
+    margin-left: 60px;
 }
 
 ul {
@@ -47,7 +63,19 @@ ul {
 }
 
 li {
+    background:rgba(245, 245, 245, 0.671);
     list-style: none;
+    margin: 15px 0;
+    padding: 5px 0;
+    text-align: center;
+}
+
+.label {
+    font-weight: bold;
+}
+
+li h3 {
+    font-size: 30px;
 }
 
 p1 {
@@ -63,22 +91,12 @@ p {
     font-weight: 500;
 }
 
-a{
-    display:flex;
-    align-items: center;
-    justify-content:center;
-    margin-right: 30%;
-    margin-left: 4%;
-}
-
 /*Add trip/Delete trip Button styling*/
 a button{
     background-color: #6992b4;
     font-size: 20px;
     color: aliceblue;
     border-radius: 5px;
-    margin-left: 50%;
-    margin-right: 10%;
     margin-top: 2%;
     margin-bottom: 2%;
     cursor: pointer;
@@ -111,8 +129,13 @@ button:hover {
     transform: scale(1.07);
 }
 
+#trip-header {
+    margin-left: auto;
+    text-align: center;
+}
+
 /*Travels Section Card Styling*/
-section{
+section {
     position: relative;
     height: 300px;
     z-index: 2;
