--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<link rel="stylesheet" href="/assets/css/styles.css" type="t" />
+	<link rel="stylesheet" href="/assets/css/styles.css" type="text/css" />
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<!-- The core Firebase JS SDK is always required and must be listed first -->
 	<script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
