--- a/views/addTrip.handlebars
+++ b/views/addTrip.handlebars
@@ -1,6 +1,6 @@
 <div className = 'form'>
 
-  <h2>Add A Trip</h2>
+  <h2 id="trip-header">Tell Us About Your Trip!</h2>
 
   <form class="create-trip">
 
