adds auth files, changes delete button to delete based on summary, not wuthor, auth still needs work, need to re-direct to main page after submitting a new trip.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,7 +17,7 @@
     <p><span class="label">{{this.author}} Wrote:</span></p>
     <p><span class="label">Description:</span> {{this.summary}}</p>
     <p><span class="label">Rating:</span> {{this.rating}}</p>
-    <button class="delete" data-id="{{this.author}}">Delete: {{this.name}}</button>
+    <button class="delete" data-id="{{this.summary}}">Delete: {{this.name}}</button>
   </li>
   <div id="image">
     <img id="image" src="">
