--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,26 +1,28 @@
-<div className='header'>
-  <h1>Tripper</h1>
-  <h2 id="sub-header">Explore the world</p>
+<div class='header'>
+  <div class='headtext'>
+    <h1>Tripper</h1>
+    <h2 id="sub-header">Explore the world</p>
+  </div>
+  <div id="nav-btns">
+    <a href="/addTrip" class="addTrip" type="click"><button id="addTrip">Add a Trip</button></a>
+    <a href="/{{this.id}}"><button id="sortRating">Sort Trips by Rating</button></a>
+  </div>
 </div>
 
-<div id="nav-btns">
-  <a href="/addTrip" class="addTrip" type="click"><button id="addTrip">Add a Trip</button></a>
-  <a href="/{{this.id}}"><button id="sortRating">Sort Trips by Rating</button></a>
-</div>
 
 
 <!-- Pass in data from tripper_db -->
-<ul>
+<ul class='cards'>
   {{#each trip}}
   <li>
     <h3><span class="label">Destination: </span><span id='destination'>{{this.name}}</span></h3>
     <p><span class="label">{{this.author}} Wrote:</span></p>
     <p><span class="label">Description:</span> {{this.summary}}</p>
     <p><span class="label">Rating:</span> {{this.rating}}</p>
-    <button class="delete" data-id="{{this.summary}}">Delete: {{this.name}}</button>
-  </li>
-  <div id="image">
     <img id="image" src="">
-  </div>
+    <button class="delete" data-id="{{this.summary}}">Delete: {{this.name}}</button>
+    
+  </li>
+
   {{/each}}
 </ul>
