--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -66,6 +66,7 @@ li {
     flex-direction: column;
     column-gap: 10px;
     margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 .label {
@@ -74,10 +75,37 @@ li {
 
 li h3 {
     font-size: 30px;
+    border-color:#6992b4;
+    border-style: solid;
+    border-radius: 10px;
+    width:25%;
+    margin:0 auto;
+    text-align:center;
+    justify-content: center;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 10px;
+    margin-top: 10px;
+
+}
+
+h4 {
+    font-size: 26px;
+    margin: 0;
 }
 
 p {
     font-weight: 500;
+    font-size: 20px;
+    margin: 20px;
+    line-height: 30px;
+}
+
+.image {
+    display: flex;
+    justify-content: center;
+    margin: 0, 10px, 0, 10px;
 }
 
 /*Add trip/Delete trip Button styling*/
