--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -242,17 +242,26 @@ footer ul li {
         margin-left: 20%;
         margin-right: 20%
     }
+    .delete {
+        font-size: 16px;
+    }
     
 }
 
-@media all and ( max-width: 320px) {
+@media all and ( max-width: 375px) {
     .header {
         width: max-content;
     }
+    li {
+        height: 800px;
+    }
+    p {
+        width: max-content;
+        font-size: 30px;
+    }
     .image {
-        width: 30%;
-        max-width: 140px;
-        max-height: 140px;
+        max-width: 30px;
+        max-height: 30px;
 
     }
     html body .create-trip {
@@ -261,5 +270,6 @@ footer ul li {
     .nav-btns {
         flex-direction: column;
     }
+    
 }
 
