--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -244,6 +244,7 @@ footer ul li {
     }
     .delete {
         font-size: 16px;
+        background-image: url(../images/delete.png);
     }
     
 }
@@ -270,6 +271,9 @@ footer ul li {
     .nav-btns {
         flex-direction: column;
     }
-    
+    button .delete {
+        background-color: none;
+        background-image: url(../images/delete.png);
+    }
 }
 
