--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,3 +2,15 @@
     <h1>Please Log-in To Add A Trip</h1>
 </div>
 
+<form class="login-form">
+    <div class="form-group">
+        <label for="authorization">Username:</label>
+        <textarea id="username" name="authorize" rows="8" cols="40"></textarea>
+    </div>
+    <div class="form-group">
+        <label for"authorization">Password:</label>
+        <textarea id="password" name="authorize" rows="8" cols="40"></textarea>
+    </div>
+    <button id="login" type="submit">Log-in</button>
+    <button id="signup" type="submit">Sign-up</button>
+</form>
