adds favicon to html

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="/assets/css/styles.css" type="text/css" />
+	<link rel="icon" type="image/png" href="/assets/images/favicon.png"/>
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<title>Tripper</title>
 </head>
