Functional API call

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -18,6 +18,6 @@
     <p><span class="label">Rating:</span> {{this.rating}}</p>
     <button class="delete" data-id="{{this.summary}}">Delete: {{this.name}}</button>
   </li>
-  <div class="image"></div>
+  <div id="{{this.name}}-image" class="image"></div>
   {{/each}}
 </ul>
