--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
     <h2 id="sub-header">Explore the world</p>
   </div>
   <div id="nav-btns">
-    <a href="/addTrip" class="addTrip" type="click"><button id="addTrip">Add a Trip</button></a>
+    <a href="/login" class="addTrip" type="click"><button id="addTrip">Add a Trip</button></a>
   </div>
 </div>
 
