--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,16 +1,22 @@
 <div id=loginHeader>
-    <h1>Please Log-in To Add A Trip</h1>
+    <h1>Please Log-in</h1>
 </div>
 
-<form class="login-form">
+<div id="instructions">
+    <h3>In order to Add a trip, you must log-in!</h3>
+    <h3>Or, <a href="/signup">Sign-up here!</a></h3>
+</div>
+
+<h2>Login Form</h2>
+<form class="login">
     <div class="form-group">
-        <label for="authorization">Username:</label>
-        <textarea id="username" name="authorize" rows="8" cols="40"></textarea>
+        <label for="exampleInputUsername">Username</label>
+        <input type="username" class="form-control" id="loginUsername" placeholder="Username">
     </div>
     <div class="form-group">
-        <label for"authorization">Password:</label>
-        <textarea id="password" name="authorize" rows="8" cols="40"></textarea>
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="loginPassword" placeholder="Password">
     </div>
-    <button id="login" type="submit">Log-in</button>
-    <button id="signup" type="submit">Sign-up</button>
+    <button type="submit" id="login_submit" class="btn btn-default">Login</button>
 </form>
+<script src="/assets/js/login.js" type=""></script>
