--- a/views/addTrip.handlebars
+++ b/views/addTrip.handlebars
@@ -1,4 +1,4 @@
-<div className = 'form'>
+<div class="form">
 
   <h2 id="trip-header">Tell Us About Your Trip!</h2>
 
@@ -21,7 +21,7 @@
       <textarea id="rating" name="trip" rows="8" cols="40"></textarea>
     </div>
 
-    <button id="submit" type="submit">Add Your Trip</button>
   </form>
+    <button id="submit" type="submit">Add Your Trip</button>
 
 </div>
