--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,21 +1,16 @@
-<div id=loginHeader>
-    <h1>Please Log-in</h1>
+<div id="loginHeader">
+    <h2>In order to Add a trip, you must log-in!</h3>
+    <h2><a href="/signup">If you would like to create an account, Sign-up here!</a></h3>
 </div>
 
-<div id="instructions">
-    <h3>In order to Add a trip, you must log-in!</h3>
-    <h3>Or, <a href="/signup">Sign-up here!</a></h3>
-</div>
-
-<h2>Login Form</h2>
 <form class="login">
     <div class="form-group">
-        <label for="exampleInputUsername">Username</label>
-        <input type="username" class="form-control" id="loginUsername" placeholder="Username">
+        <label class="label" for="exampleInputUsername">Username</label>
+        <input class="label" type="username" class="form-control" id="loginUsername" placeholder="Username">
     </div>
     <div class="form-group">
-        <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" id="loginPassword" placeholder="Password">
+        <label class="label" for="exampleInputPassword1">Password</label>
+        <input class="label" type="password" class="form-control" id="loginPassword" placeholder="Password">
     </div>
     <button type="submit" id="login_submit" class="btn btn-default">Login</button>
 </form>
