--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,25 +1,16 @@
-<div id=loginHeader>
-    <h1>Registration</h1>
+<div id="registrationHeader">
+    <h2>Please register in order to add a trip!</h3>
+    <h2><a href="/login">If you already have an account, Log-in here!</a></h3>
 </div>
 
-<div id="instructions">
-    <h3>Please register in order to add a trip!</h3>
-    <h3>Or, <a href="/login">Log-in here!</a></h3>
-</div>
-
-<h2>Sign Up Form</h2>
 <form class="signup">
     <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" class="form-control" id="signupUsername" placeholder="Username">
+        <label class="label" for="username">Username</label>
+        <input class="label" type="text" class="form-control" id="signupUsername" placeholder="Username">
     </div>
     <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" class="form-control" id="signupPassword" placeholder="Password">
-    </div>
-    <div style="display: none" id="alert" class="alert alert-danger" role="alert">
-        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
-        <span class="sr-only">Error:</span> <span class="msg"></span>
+        <label class="label" for="password">Password</label>
+        <input class="label" type="password" class="form-control" id="signupPassword" placeholder="Password">
     </div>
     <button type="submit" id="signup_submit" class="btn btn-default">Sign Up</button>
 </form>
