--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -5,12 +5,12 @@
 
 <form class="login">
     <div class="form-group">
-        <label class="label" for="exampleInputUsername">Username</label>
-        <input class="label" type="username" class="form-control" id="loginUsername" placeholder="Username">
+        <label class="login-label" for="exampleInputUsername">Username</label>
+        <input class="login-label" type="username" class="form-control" id="loginUsername" placeholder="Username">
     </div>
     <div class="form-group">
-        <label class="label" for="exampleInputPassword1">Password</label>
-        <input class="label" type="password" class="form-control" id="loginPassword" placeholder="Password">
+        <label class="login-label" for="exampleInputPassword1">Password</label>
+        <input class="login-label" type="password" class="form-control" id="loginPassword" placeholder="Password">
     </div>
     <button type="submit" id="login_submit" class="btn btn-default">Login</button>
 </form>
