--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -5,12 +5,12 @@
 
 <form class="signup">
     <div class="form-group">
-        <label class="label" for="username">Username</label>
-        <input class="label" type="text" class="form-control" id="signupUsername" placeholder="Username">
+        <label class="login-label" for="username">Username</label>
+        <input class="login-label" type="text" class="form-control" id="signupUsername" placeholder="Username">
     </div>
     <div class="form-group">
-        <label class="label" for="password">Password</label>
-        <input class="label" type="password" class="form-control" id="signupPassword" placeholder="Password">
+        <label class="login-label" for="password">Password</label>
+        <input class="login-label" type="password" class="form-control" id="signupPassword" placeholder="Password">
     </div>
     <button type="submit" id="signup_submit" class="btn btn-default">Sign Up</button>
 </form>
