--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -21,3 +21,13 @@
   <div id="{{this.name}}-image" class="image"></div>
   {{/each}}
 </ul>
+
+<footer>
+  <h3>&copy; Tripper 2021</h3>
+  <ul id="contributers">
+    <li id="contributer">Angelee Shaw</li>
+    <li id="contributer">Russell Jewett</li>
+    <li id="contributer">Wilkinson Williams</li>
+    <li id="contributer">Josh Broughton</li>
+  </ul>
+</footer>
